--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.onclick = function(event) {
 <head>
 <meta charset="utf-8">
 <title>Australian Wave University</title>
-<link href="css/style.css"  type="text/css" rel="stylesheet">
+<link href="style.css"  type="text/css" rel="stylesheet">
 <script src="js/1.js"></script>
 
 </head>
@@ -111,7 +111,7 @@ window.onclick = function(event) {
      
       <h1 style="font-size:20px; color:#f00;">&nbsp;</h1>
       <h1 style="font-size:20px; color:#f00;">Australian Wave University</h1>
-      <p><img src="images/1.png" width="360" style="float:right; ">　　Australian Wave University
+      <p><img src="1.png" width="360" style="float:right; ">　　Australian Wave University
         (Australian Wave University), referred to as ABU, was founded in 1946, located in Canberra, the capital of Australia, is a public comprehensive research university, is also a member of the Alliance of Pacific Rim universities, the International Alliance of Research universities, the Australian Alliance of eight universities, the Association of Commonwealth Universities. It was created by legislation of the Federal Parliament of Australia and enjoys national university status as the highest institution in Australia.</p>
       <p>1 graduate school, a total of 75 departments. Its engineering and business schools enjoy a high reputation and have strong strengths in the fields of engineering and computing. Its specialties in civil and structural engineering, petroleum engineering, environmental science, law, accounting and finance rank among the world's top 20. The university is also known as the "University of War" because of the Australian Defence Force Academy.</p>
       </p>
