--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Australian Wave University</title>
 <script src="1.js"></script> 
-<link href="css/style.css"  type="text/css" rel="stylesheet">
+<link href="style.css"  type="text/css" rel="stylesheet">
 </head>
 <body>
   
@@ -22,7 +22,7 @@
   </div>
   <div class="main_m">
     <div class="two_pho">
-     <div class="banner"><img src="images/banner1.jpg" width="960"></div>
+     <div class="banner"><img src="banner1.jpg" width="960"></div>
       <h1 style="font-size:20px; text-align:center; color:#f00; line-height:60px;">Australian Wave University</h1>
       <h1>&nbsp;</h1>
       <p> Australia has a first-class quality of education, the country has 38 universities and more than 230 technical colleges. These universities and technical colleges are almost all government public schools (except three private universities), their education system is governed by the state government, so the administrative system is slightly different from state to state, but basically the quality of education is controlled by the Australian federal Government, so each school can maintain an average but high quality of education. The diplomas of each school are mutually recognized by the states and adopted throughout the country. Australia's academic qualifications are widely recognized by all countries in the world, including our country.</p> <br>
@@ -30,7 +30,7 @@
       <br>
       <p>
         <center>
-          <img src="images/banner1.jpg"  width="850">
+          <img src="banner1.jpg"  width="850">
         </center>
       </p>
       <br>
@@ -40,9 +40,9 @@
   <div class="footer bai"> Australian Wave University</div>
 </div>
 <div id="slideshow">  
-  <img src="images/80-1P60G60PJ06(1).png" alt="">  
-  <img src="images/R-C(1).jpg" alt="">  
-  <img src="images/banner1.jpg" alt="">  
+  <img src="80-1P60G60PJ06(1).png" alt="">  
+  <img src="R-C(1).jpg" alt="">  
+  <img src="banner1.jpg" alt="">  
 </div>
 <script
 #slideshow {  
