--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Australian Wave University</title>
-<link href="css/style.css"  type="text/css" rel="stylesheet">
+<link href="style.css"  type="text/css" rel="stylesheet">
 </head>
 <body>
 <div id="top">
@@ -20,7 +20,7 @@
   </div>
   <div class="main_m">
     <div class="two_pho">
-      <div class="banner"><img src="images/banner1.jpg" width="960"></div>
+      <div class="banner"><img src="banner1.jpg" width="960"></div>
       <h1 style="font-size:20px; text-align:center; color:#f00; line-height:60px;">Australian Wave University Courses</h1>
       <p style="line-height:40px; font-size:20px;color: black;">ICTDBS503 - Create a data warehouse </p>
       <p style="line-height:30px; font-size:16px;color: blue;">This unit describes the skills and knowledge required to design, develop and implement a data warehouse within an organisation.
