--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Australian Wave University</title>
-<link href="css/style.css"  type="text/css" rel="stylesheet">
+<link href="style.css"  type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
       <a href="4.html" >Contact</a></div>
   </div>
   <div class="main_m">
-    <a href="https://map.baidu.com/search/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%95%86%E4%B8%9A%E8%A1%97/@15428745.455954451,-4129744.556383615,15.03z?querytype=con&from=webmap&contp=1&wd=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%95%86%E4%B8%9A%E8%A1%97&c=31764&biz_forward=%7B%22scaler%22:2,%22styles%22:%22pl%22%7D&pn=0&device_ratio=2&da_src=shareurl"><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0"  src="images/map.png" alt="..." style="display: block; margin-left: auto; margin-right: auto;"/></a>
+    <a href="https://map.baidu.com/search/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%95%86%E4%B8%9A%E8%A1%97/@15428745.455954451,-4129744.556383615,15.03z?querytype=con&from=webmap&contp=1&wd=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%95%86%E4%B8%9A%E8%A1%97&c=31764&biz_forward=%7B%22scaler%22:2,%22styles%22:%22pl%22%7D&pn=0&device_ratio=2&da_src=shareurl"><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0"  src="map.png" alt="..." style="display: block; margin-left: auto; margin-right: auto;"/></a>
     
      
     </div>
