--- a/4.html
+++ b/4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Australian Wave University</title>
-<link href="css/style.css"  type="text/css" rel="stylesheet">
+<link href="style.css"  type="text/css" rel="stylesheet">
 </head>
 <body>
 <div id="top">
@@ -20,7 +20,7 @@
   </div>
   <div class="main_m">
     <div class="two_pho">
-      <div class="banner"><img src="images/banner1.jpg" width="960"></div>
+      <div class="banner"><img src="banner1.jpg" width="960"></div>
       <h1 style="font-size:20px; text-align:center; color:#f00; line-height:60px;">Contact</h1>
       <table width="650" border="0" cellspacing="20" cellpadding="15" style="margin:20px auto; height:450px;">
         <tr>
