--- a/1.html
+++ b/1.html
@@ -125,7 +125,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img-4.jpg" style="width:100%">
+  <img src="banner1.jpg" style="width:100%">
   <div class="text"></div>
 </div>
 
