--- a/4.html
+++ b/4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Australian Wave University</title>
+<title>Tao(Peng Zhentao)</title>
 <link href="style.css"  type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +42,7 @@
     </div>
     <div style="clear:both"></div>
   </div>
-  <div class="footer bai"> Australian Wave University</div>
+  <div class="footer bai"> Tao(Peng Zhentao)</div>
 </div>
 
 </body>
