--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ window.onclick = function(event) {
 <html>
 <head>
 <meta charset="utf-8">
-<title>Australian Wave University</title>
+<title>Tao(Peng Zhentao)</title>
 <link href="style.css"  type="text/css" rel="stylesheet">
 <script src="js/1.js"></script>
 
@@ -124,7 +124,7 @@ window.onclick = function(event) {
     </div>
     <div style="clear:both"></div>
   </div>
-  <div class="footer bai"> Australian Wave University</div>
+  <div class="footer bai"> Tao(Peng Zhentao)</div>
 </div>
 
 </body>
